tokens.get(tokens.size() - 1) was replaced with tokens.getLast()